--- a/siivagunnerdb/siivagunnerdb/youtube/channels/templates/channels/channelList.html
+++ b/siivagunnerdb/siivagunnerdb/youtube/channels/templates/channels/channelList.html
@@ -12,9 +12,7 @@
     <select name="sort">
       <option value="publishedAt">By join date</option>
       <option value="title" {% if request.GET.sort == 'title' %} selected {% endif %}>By title</option>
-      <!--
-      <option value="subscriberCount">By subscribers</option>
-      -->
+      <!-- <option value="subscriberCount">By subscribers</option> -->
     </select>
     <select name="sortType">
       <option value="descending">Descending</option>
@@ -28,19 +26,15 @@
       <th>Channel ID</th>
       <th>Status</th>
       <th>Join Date</th>
-      <!--
-      <th>Subscribers</th>
-      -->
+      <!-- <th>Subscribers</th> -->
     </tr>
     {% for channel in channels %}
       <tr class="channel">
-        <td><a href="{% url 'channels:details' channel.id %}">{{channel.title}}</a></td>
+        <td><a href="{% url 'channels:details' channel.id %}">{{ channel.title }}</a></td>
         <td><a href="https://www.youtube.com/channel/{{ channel.id }}" target="_blank">{{ channel.id }}</a></td>
         <td>{{ channel.channelStatus }}</td>
         <td>{{ channel.publishedAt }}</td>
-        <!--
-        <td>{{ channel.subscriberCount }}</td>
-        -->
+        <!-- <td>{{ channel.subscriberCount }}</td> -->
       </tr>
     {% endfor %}
   </table>
