Add link to playlist of search results

--- a/siivagunnerdb/siivagunnerdb/youtube/videos/templates/videos/videoList.html
+++ b/siivagunnerdb/siivagunnerdb/youtube/videos/templates/videos/videoList.html
@@ -36,6 +36,7 @@
     {% endif %}
   </form>
   <a class="smallText" href="{% url 'channels:list' %}">Search for channels instead</a>
+  <a class="smallText" href="https://www.youtube.com/watch_videos?video_ids={{ first50Ids }}" target="_blank">View playlist of results</a>
   <table class="videos">
     <tr class="video">
       <th>Video Title</th>
