Add Google Forms to report page, update footer links

--- a/siivagunnerdb/templates/baseLayout.html
+++ b/siivagunnerdb/templates/baseLayout.html
@@ -40,7 +40,7 @@
       <ul>
         <li><a href="{% url 'home' %}">Search database</a></li>
         <li><a href="{% url 'generate' %}">Generate rip template</a></li>
-        <li><a href="{% url 'reports:add' %}">Report a bug</a></li>
+        <li><a href="{% url 'reports' %}">Submit data</a></li>
       </ul>
     </nav>
     <main>
@@ -55,7 +55,8 @@
       {% endblock %}
     </main>
     <footer>
-      <a target="_blank" href="https://github.com/SiIvaGunner-Database">SiIvaGunner Database</a>
+      <a target="_blank" href="https://drive.google.com/drive/u/0/folders/1ElZaYVTRg7TfS8UsVteHja7M4N3C6_AS">View Database Sheets</a>
+      <a target="_blank" href="https://github.com/SiIvaGunner-Database">View Project Files</a>
     </footer>
     <!-- <img class="gadget" src="{% static 'gadget1.png' %}" alt="Inspector Gadget grins broadly." /> -->
     <img class="gadget" src="{% static 'gadget2.png' %}" alt="Inspector Gadget smiles at you." />
