Update reference to deployed template generator instance

--- a/siivagunnerdb/static/style.css
+++ b/siivagunnerdb/static/style.css
@@ -90,7 +90,7 @@ main {
   background-color: #F8F8F8;
 }
 
-main, textarea:not(#template) {
+main, textarea:not(#template, #templateArea) {
   font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 }
 
