--- a/siivagunnerdb/templates/generate.html
+++ b/siivagunnerdb/templates/generate.html
@@ -1,9 +1,9 @@
 {% extends 'baseLayout.html' %}
 {% block content%}
   <h2>Generate a template for wiki articles</h2>
-  <iframe id="templateGenerator"
+  <iframe id="ripTemplateGenerator"
     title="Rip Template Generator"
     style="width: 100%; border: none; flex-grow: 1; margin: -16px;"
-    src="https://siivagunner-database.github.io/Rip-Template-Generator/">
+    src="https://generator.siivagunnerdatabase.net">
   </iframe>
 {% endblock %}
