--- a/siivagunnerdb/siivagunnerdb/youtube/channels/templates/channels/channelDetails.html
+++ b/siivagunnerdb/siivagunnerdb/youtube/channels/templates/channels/channelDetails.html
@@ -1,17 +1,18 @@
 {% extends 'baseLayout.html' %}
+{% load static %}
 {% block content%}
   <div class="channel">
     <h2>
       {{ channel.title }}
       <a href="https://www.youtube.com/channel/{{ channel.id }}" target="_blank">
-        <img src="/static/YouTube_icon.svg" alt="YouTube icon" decoding="async" loading="lazy" width="25" height="25" />
+        <img src="{% static 'YouTube_icon.svg' %}" alt="YouTube icon" decoding="async" loading="lazy" width="25" height="25" />
       </a>
       <a href="https://web.archive.org/web/*/https://www.youtube.com/channel/{{ channel.id }}" target="_blank">
-        <img src="/static/Internet_Archive_icon.svg" alt="Internet Archive icon" decoding="async" loading="lazy" width="25" height="25" />
+        <img src="{% static 'Internet_Archive_icon.svg' %}" alt="Internet Archive icon" decoding="async" loading="lazy" width="25" height="25" />
       </a>
       {% if channel.wiki != "" %}
         <a class="smallText" href="https://{{ channel.wiki }}.fandom.com/wiki/Main_Page" target="_blank">
-          <img src="/static/Fandom_icon.png" alt="Fandom icon" decoding="async" loading="lazy" height="25" />
+          <img src="{% static 'Fandom_icon.png' %}" alt="Fandom icon" decoding="async" loading="lazy" height="25" />
         </a>
       {% endif %}
     </h2>
