--- a/siivagunnerdb/static/style.css
+++ b/siivagunnerdb/static/style.css
@@ -181,6 +181,23 @@ p {
   font-size: 2.4em;
 }
 
+#channelImageDiv {
+  position: relative;
+  height: 160px;
+}
+
+#thumbnailImage {
+  position: absolute;
+  height: 160px;
+  left: 0;
+}
+
+#bannerImage {
+  position: absolute;
+  height: 160px;
+  right: 0;
+}
+
 .boldText {
   font-weight: bold;
 }
