Add brown bricks and small images

--- a/siivagunnerdb/templates/baseLayout.html
+++ b/siivagunnerdb/templates/baseLayout.html
@@ -17,6 +17,8 @@
     </script>
   </head>
   <body>
+    <img class="gadget" src="{% static 'gadget1-small.png' %}" alt="Inspector Gadget grins broadly." decoding="async" loading="lazy" />
+    <!-- <img class="gadget" src="{% static 'gadget2-small.png' %}" alt="Inspector Gadget smiles at you." decoding="async" loading="lazy" /> -->
     <header class="wrapper">
       <div>
         <a id="headerTitle" href="{% url 'home' %}">SiIvaGunner Database</a>
@@ -58,7 +60,5 @@
       <a target="_blank" href="https://drive.google.com/drive/u/0/folders/1ElZaYVTRg7TfS8UsVteHja7M4N3C6_AS">View Database Sheets</a>
       <a target="_blank" href="https://github.com/SiIvaGunner-Database">View Project Files</a>
     </footer>
-    <!-- <img class="gadget" src="{% static 'gadget1.png' %}" alt="Inspector Gadget grins broadly." decoding="async" loading="lazy" /> -->
-    <img class="gadget" src="{% static 'gadget2.png' %}" alt="Inspector Gadget smiles at you." decoding="async" loading="lazy" />
   </body>
 </html>
