--- a/siivagunnerdb/static/style.css
+++ b/siivagunnerdb/static/style.css
@@ -22,6 +22,8 @@ html {
   height: 100%;
   background-color: #555555;
   background-image: linear-gradient(#444444, #666666);
+  background-image: url("brown-bricks-small.png");
+  background-repeat: round;
   background-attachment: fixed;
 }
 
