Remove brown bricks

--- a/siivagunnerdb/templates/baseLayout.html
+++ b/siivagunnerdb/templates/baseLayout.html
@@ -17,8 +17,8 @@
     </script>
   </head>
   <body>
-    <img class="gadget" src="{% static 'gadget1-small.png' %}" alt="Inspector Gadget grins broadly." decoding="async" loading="lazy" />
-    <!-- <img class="gadget" src="{% static 'gadget2-small.png' %}" alt="Inspector Gadget smiles at you." decoding="async" loading="lazy" /> -->
+    <!-- <img class="gadget" src="{% static 'gadget1-small.png' %}" alt="Inspector Gadget grins broadly." decoding="async" loading="lazy" /> -->
+    <img class="gadget" src="{% static 'gadget2-small.png' %}" alt="Inspector Gadget smiles at you." decoding="async" loading="lazy" />
     <header class="wrapper">
       <div>
         <a id="headerTitle" href="{% url 'home' %}">SiIvaGunner Database</a>
