--- a/siivagunnerdb/siivagunnerdb/youtube/channels/templates/channels/channelList.html
+++ b/siivagunnerdb/siivagunnerdb/youtube/channels/templates/channels/channelList.html
@@ -18,6 +18,12 @@
       <option value="descending">Descending</option>
       <option value="ascending" {% if request.GET.order == 'ascending' %} selected {% endif %}>Ascending</option>
     </select>
+    <!-- Channel type will remain commented out until all channels in the database are manually reviewed and updated -->
+    <select name="channelType" style="display:none;">
+      <option value="default">SiIvaGunner and fan channels</option>
+      <option value="original">SiIvaGunner channels</option>
+      <option value="all" {% if request.GET.channelType == 'all' %} selected {% endif %}>All channels</option>
+    </select>
     {% if request.GET.minimumSubscribers %}
       <input type="number" name="minimumSubscribers" placeholder="Minimum subscribers" value="{{ request.GET.minimumSubscribers }}"/>
     {% else %}
