--- a/siivagunnerdb/templates/generate.html
+++ b/siivagunnerdb/templates/generate.html
@@ -1,6 +1,6 @@
 {% extends 'baseLayout.html' %}
 {% block content%}
-  <h2>Generate a template for wiki articles</h2>
+  <h2>Generate a rip template for wiki articles</h2>
   <iframe id="ripTemplateGenerator"
     title="Rip Template Generator"
     style="width: 100%; border: none; flex-grow: 1; margin: -16px;"
