--- a/siivagunnerdb/templates/reports.html
+++ b/siivagunnerdb/templates/reports.html
@@ -1,6 +1,6 @@
 {% extends 'baseLayout.html' %}
 {% block content%}
-  <h2>Submit feedback or missing data</h2>
+  <h2>Submit channels, videos, or general feedback</h2>
   <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeJYoGiaMNz5V4ReJDgfkQXvF8cdgYCbcrXupjR4-nl37qLYQ/viewform?embedded=true"
   style="width: 100%; min-height: 595px;" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
   <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScrHZiEcqbWb1hgOubRfvzM13497BfpR0I-hNBjmD57SumLlA/viewform?embedded=true"
