--- a/siivagunnerdb/siivagunnerdb/youtube/videos/templates/videos/videoList.html
+++ b/siivagunnerdb/siivagunnerdb/youtube/videos/templates/videos/videoList.html
@@ -12,7 +12,6 @@
     <select name="sort" selectedIndex=2>
       <option value="publishedAt">By upload date</option>
       <option value="title" {% if request.GET.sort == 'title' %} selected {% endif %}>By title</option>
-      <!-- <option value="duration" {% if request.GET.sort == 'duration' %} selected {% endif %}>By length</option> -->
       <option value="viewCount" {% if request.GET.sort == 'viewCount' %} selected {% endif %}>By views</option>
     </select>
     <select name="order">
@@ -29,10 +28,9 @@
       <option value="deleted" {% if request.GET.filter == 'deleted' %} selected {% endif %}>Deleted</option>
       <option value="unavailable" {% if request.GET.filter == 'unavailable' %} selected {% endif %}>Unavailable</option>
     </select>
-    <!-- Channel type will remain commented out until all channels in the database are manually reviewed and updated -->
-    <select name="channelType" style="display:none;">
+    <select name="channelType">
       <option value="default">SiIvaGunner and fan channels</option>
-      <option value="original">SiIvaGunner channels</option>
+      <option value="original" {% if request.GET.channelType == 'original' %} selected {% endif %}>SiIvaGunner channels</option>
       <option value="all" {% if request.GET.channelType == 'all' %} selected {% endif %}>All channels</option>
     </select>
     {% if request.GET.minimumSubscribers %}
